--- a/nginx 1.7.11.3 Gryphon/conf/nginx.conf
+++ b/nginx 1.7.11.3 Gryphon/conf/nginx.conf
@@ -172,11 +172,11 @@ http {
     #    }
     #}
 
-    include E:/Projects/my-githubs/vod-nginx/*.http.conf;
+    include ../../*.http.conf;
 
 
 }
 
 rtmp {
-    include E:/Projects/my-githubs/vod-nginx/*.rtmp.conf;
+    include ../../*.rtmp.conf;
 }
