--- a/datas.conf
+++ b/datas.conf
@@ -1,5 +1,8 @@
 #generated file,do not edit
 
-    location /4fbee79a-ac71-11e6-9ba3-dc536072c3f1 {
+    location /a35d2bde-ac72-11e6-983e-dc536072c3f1 {
         alias d:\Users\Administrator\Pictures;
+    }
+    location /a35da11a-ac72-11e6-b62e-dc536072c3f1 {
+        alias H:\videos;
     }
