--- a/nginx 1.7.11.3 Gryphon/conf/nginx.conf
+++ b/nginx 1.7.11.3 Gryphon/conf/nginx.conf
@@ -172,11 +172,11 @@ http {
     #    }
     #}
 
-    include ../../*.http.conf;
+    include ../vod_server/confs/*.http.conf;
 
 
 }
 
 rtmp {
-    include ../../*.rtmp.conf;
+    include ../vod_server/confs/*.rtmp.conf;
 }
