--- a/nginx 1.7.11.3 Gryphon/conf/nginx.conf
+++ b/nginx 1.7.11.3 Gryphon/conf/nginx.conf
@@ -60,7 +60,8 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       65500;
+        #listen       80;
         server_name  localhost;
 
         #charset koi8-r;
@@ -82,6 +83,7 @@ http {
             ##CheckRule "$RFI >= 8" BLOCK;
             ##CheckRule "$TRAVERSAL >= 4" BLOCK;
             ##CheckRule "$XSS >= 8" BLOCK;
+
             root   html;
             index  index.html index.htm;
         }
